--- a/password.html
+++ b/password.html
@@ -44,7 +44,7 @@
       <a class="tab" href="./">電卓</a>
       <a class="tab" href="./help.html">説明</a>
       <a class="tab" href="./memo.html">メモ</a>
-      <a class="tab" href="./qr.html">QR</a>
+      <a class="tab" href="./camera.html">QR</a>
       <a class="tab" href="./timer.html">タイマー</a>
       <a class="tab" href="./convert.html">換算</a>
       <a class="tab active" href="./password.html">PW</a>
