--- a/memo.html
+++ b/memo.html
@@ -88,7 +88,7 @@
       <a class="tab" href="./">電卓</a>
       <a class="tab" href="./help.html">説明</a>
       <a class="tab active" href="./memo.html">メモ</a>
-      <a class="tab" href="./camera.html">QR</a>
+      <a class="tab" href="./camera.html">カメラ</a>
       <a class="tab" href="./timer.html">タイマー</a>
       <a class="tab" href="./convert.html">換算</a>
       <a class="tab" href="./password.html">PW</a>
