chore(sw): bump service worker to v1.5.1
nav: remove all OCR tabs across pages

qr: preset 'ocr' -> ./camera.html#ocr

--- a/qr.html
+++ b/qr.html
@@ -67,7 +67,6 @@
       <a class="tab" href="./convert.html">換算</a>
       <a class="tab" href="./password.html">PW</a>
       <a class="tab" href="./voice.html">音声</a>
-      <a class="tab" href="./ocr.html">OCR</a>
     </nav>
 
     <section class="content">
@@ -217,7 +216,7 @@
         if (kind==='convert') return base('./convert.html');
         if (kind==='password') return base('./password.html');
         if (kind==='voice') return base('./voice.html');
-        if (kind==='ocr') return base('./ocr.html');
+        if (kind==='ocr') return base('./camera.html#ocr');
         if (kind==='here') return location.href;
         return base('./');
       }
